@@ -1,3 +1,7 @@
+drkns 03.07.2016 19:11:29 +0200 - build 4735
+
+1. При определенных условиях мог падать поиск во вьювере.
+
 drkns 03.07.2016 18:07:21 +0200 - build 4734
 
 1. Рефакторинг.
